# tortoise-native

./: .gitignore  .pnp.cjs  README.md  import.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: publish.yml  publish_mac.yml  publish_win.yml  test.yml
src/: App.css  App.tsx  Nav.tsx  import.tsx  rustTypes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: CashFlow.ts  Payment.ts
src-tauri/capabilities/: capabilities.json
src-tauri/capabilities/schemas/: desktop-schema.json  macOS-schema.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  cli.rs  gpt_functions.rs  io.rs  lib.rs  main.rs  tests.rs
src-tauri/src/api/: import.rs  mod.rs  sim.rs
src-tauri/src/schemas/: .account.json  .asset.json  .payment.json  .portfolio.json
src-tauri/src/schemas/gpt_functions/: create_account.json
src-tauri/src/sim/: cash.rs  excel.rs  mod.rs  portfolio.rs
src-tauri/src/sim/examples/: mod.rs  simple_account.rs  two_account_scenario.rs
src/api/: account.tsx  import.tsx  portfolio.tsx  sim.tsx
src/budget/: BalanceChart.tsx  CashFlowList.tsx  CashFlowsChart.tsx  Main.tsx  Select.tsx
src/common/: NavProvider.tsx  NumberInput.tsx  Select.tsx  Tag.tsx  TagsInput.tsx  ValueFormatter.ts
src/create/: Main.tsx
src/pages/account/: CashFlow.tsx  Main.tsx
src/pages/account/budget/: BalanceChart.tsx  CashFlowList.tsx  CashFlowsChart.tsx  Main.tsx
src/pages/budget/: BalanceChart.tsx  CashFlowList.tsx  CashFlowsChart.tsx  Main.tsx
src/pages/home/: Main.tsx
src/pages/import/: ImportAccount.tsx
src/pages/main/account/: CashFlow.tsx  Main.tsx
src/pages/main/account/budget/: BalanceChart.tsx  CashFlowList.tsx  CashFlowsChart.tsx  Main.tsx
src/pages/main/home/: Main.tsx  Store.ts
src/pages/main/retirement/: Main.tsx
src/pages/main/scenario/: BalanceChart.tsx  Main.tsx
src/pages/retirement/: Main.tsx
src/pages/scenario/: BalanceChart.tsx  Main.tsx
src/retirement/: Main.tsx
src/rustTypes/: Account.ts  AccountBalance.ts  Asset.ts  CashFlow.ts  Frequency.ts  InvestedAccount.ts  Portfolio.ts  Scenario.ts  SimulationResult.ts  Transfer.ts
src/scenario/: CashFlow.tsx  Main.tsx
src/store/: Account.ts
