[package]
name = "tortoise-local"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
actix-web = "4.4.0"
chrono = {version = "0.4.31", features = ["serde"] }
thousands = "0.2.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
schemars = { version = "0.8.16", features = [ "chrono" ] }
rand = "0.8.5"
xlsxwriter = "0.6.0"
memoize = "0.4.2"
rayon = "1.8.0"
polars = { version = "0.36.2", features = ["lazy"] }
rand_distr = { version = "0.4.3", features = ["serde"] }
env_logger = "0.10.2"
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.27"
dirs = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
