[package]
name = "tortoise-native"
version = "0.7.2"
description = "A financial forecasting and planning tool."
authors = ["Dan Nadler <dan@thetortoise.io>"]
license = "GNUv3"
repository = "https://github.com/dan-nadler/tortoise-native"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
chrono = {version = "0.4", features = ["serde"] }
thousands = "0.2.0"
schemars = { version = "0.8.16", features = [ "chrono" ] }
rand = "0.8.5"
xlsxwriter = "0.6"
memoize = "0.4"
rand_distr = { version = "0.4.3", features = ["serde"] }
env_logger = "0.11"
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0.1"
ts-rs = { version = "7.1.1", features = ["chrono-impl"] }
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
tokio = { version = "1.36", features = ["macros"] }
rayon = "1.8.1"
tauri-plugin-dialog = "2.0.0-beta"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "tortoise"
